--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,4 +11,5 @@ body {
   background-size: cover;
   background-attachment: fixed;
   color: #fff;
+  font-family: "Archivo Black", sans-serif;
 }
