added activate class in navlink

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,10 +6,11 @@
 
 .navLinks a {
   text-decoration: none;
-}
-
-.link {
   padding: 1rem;
   text-transform: uppercase;
   color: #fff;
+}
+
+ul > .selected {
+  color: #f9dc5c;
 }
